--- a/Baseball/Baseball_F.htm
+++ b/Baseball/Baseball_F.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Fa</h1>
+ <pre>
+    <a href="#Fa">Fa</a> <a href="#Fe">Fe</a> <a href="#Fi">Fi</a> <a href="#Fl">Fl</a> <a href="#Fr">Fr</a>
+ </pre>
+ <h1 id="Fa">Fa</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -35,7 +38,7 @@
     </td>
 </tr>
 </table>
-<h1>Fe</h1>
+<h1 id="Fe">Fe</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -50,7 +53,7 @@
             <img src="Images/1987 Topps Autos/443 Felske.jpeg" width="200">
     </tr>
     </table>
-<h1>Fi</h1>
+<h1 id="Fi">Fi</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -81,7 +84,7 @@
         </td>
     </tr>
     </table>
-<h1>Fl</h1>
+<h1 id="Fl">Fl</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -98,7 +101,7 @@
         </td>
     </tr>
     </table>
-<h1>Fr</h1>
+<h1 id="Fr">Fr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
