--- a/Baseball/Baseball_I.htm
+++ b/Baseball/Baseball_I.htm
@@ -21,7 +21,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>In</h1>
+ <pre>
+    <a href="#In">In</a> <a href="#Io">Io</a>
+ </pre>
+ <h1 id="In">In</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -37,7 +40,7 @@
 
     </tr>
 </table>
-<h1>Io</h1>
+<h1 id="Io">Io</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
