--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
-<h1>Da</h1>
+<pre>
+    <a href="#Da">Da</a> <a href="#De">De</a> <a href="#Di">Di</a> <a href="#Do">Do</a> <a href="#Dr">Dr</a> <a href="#Du">Du</a> <a href="#Dw">Dw</a>
+</pre>
+<h1 id="Da">Da</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td>
@@ -110,7 +113,7 @@
     </td>
 </tr>
 </table>
-<h1>De</h1>
+<h1 id="De">De</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td colspan="2" align="center">
@@ -130,7 +133,7 @@
     <td width="200"><img src="Images/1987 Topps Autos/022 DeCinces.jpeg" width="200"> </td>
     </tr>
     </table>
-<h1>Di</h1>
+<h1 id="Id">Di</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
@@ -152,7 +155,7 @@
     <td width="200"><img src="Images/1987 Topps Autos/" width="200"> </td>
     </tr>
     </table>
-<h1>Do</h1>
+<h1 id="Do">Do</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
         <tr>
         <td>
@@ -167,7 +170,7 @@
 
         </tr>
         </table>
-<h1>Dr</h1>
+<h1 id="Dr">Dr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
@@ -189,7 +192,7 @@
     <td width="200"></td>
     </tr>
     </table>
-<h1>Du</h1>
+<h1 id="Du">Du</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
@@ -217,7 +220,7 @@
     <td width="200"><img src="Images/1987 Topps Autos/346 Dunston.jpeg" width="200"> </td>
     </tr>
     </table>
-<h1>Dw</h1>
+<h1 id="Dw">Dw</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
