--- a/Baseball/Baseball_E.htm
+++ b/Baseball/Baseball_E.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
-<h1>Ei</h1>
+ <pre>
+    <a href="#Ei">Ei</a> <a href="#Ev">Ev</a>
+ </pre>
+<h1 id="Ei">Ei</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td>
@@ -34,7 +37,7 @@
 <td width="200"><img src="Images/1987 Topps Autos/371 Eichorn.jpeg" width=200> </td>
 </tr>
 </table>
-<h1>Ev</h1>
+<h1 id="Ev">Ev</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
