--- a/Baseball/Baseball_H.htm
+++ b/Baseball/Baseball_H.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ha</h1>
+ <pre>
+    <a href="#Ha">Ha</a> <a href="#He">He</a> <a href="#Ho">Ho</a> <a href="#Hr">Hr</a> <a href="#Hu">Hu</a>
+ </pre>
+ <h1 id="Ha">Ha</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -72,7 +75,7 @@
     </td>
     </tr>
 </table>
-<h1>He</h1>
+<h1 id="He">He</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -119,7 +122,7 @@
         </tr>
     </table>
     
-<h1>Ho</h1>
+<h1 id="Ho">Ho</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -175,7 +178,7 @@
 
         </tr>
     </table>
-<h1>Hr</h1>
+<h1 id="Hr">Hr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -193,7 +196,7 @@
 
     </tr>
     </table>
-<h1>Hu</h1>
+<h1 id="Hu">Hu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
