--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Jo</h1>
+ <pre>
+    <a href="#Jo">Jo</a>
+ </pre>
+ <h1 id="Jo">Jo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
