--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ka</h1>
+ <pre>
+    <a href="#Ka">Ka</a> <a href="#Ke">Ke</a> <a href="#Ki">Ki</a> <a href="#Kr">Kr</a>
+ </pre>
+ <h1 id="Ka">Ka</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -36,7 +39,7 @@
 
 </tr>
 </table>
-<h1>Ke</h1>
+<h1 id="Ke">Ke</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -81,7 +84,7 @@
 
         </tr>
     </table>
-<h1>Ki</h1>
+<h1 id="Ki">Ki</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -133,7 +136,7 @@
         </td>
         </tr>
     </table>
-<h1>Kr</h1>
+<h1 id="Kr">Kr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
