--- a/Baseball/Baseball_L.htm
+++ b/Baseball/Baseball_L.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>La</h1>
+ <pre>
+    <a href="#La">La</a> <a href="#Le">Le</a> <a href="#Lo">Lo</a> <a href="#Lu">Lu</a> <a href="#Ly">Ly</a>
+ </pre>
+ <h1 id="La">La</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -131,7 +134,7 @@
         </td>
     </tr>
 </table>
-<h1>Le</h1>
+<h1 id="Le">Le</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -157,7 +160,7 @@
 
     </tr>
     </table>
-<h1>Lo</h1>
+<h1 id="Lo">Lo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td colspan="2" align="center">
@@ -184,7 +187,7 @@
     
     </tr>
     </table>
-    <h1>Lu</h1>
+<h1 id="Lu">Lu</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
         <tr>
             <td>
@@ -212,7 +215,7 @@
         </tr>
 
         </table>
-<h1>Ly</h1>
+<h1 id="Ly">Ly</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
