--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -48,7 +48,7 @@
         <img src="Images/1987 Topps Autos/267 Johnson.jpeg" width="200">
     </td>
     <td width="200">
-        <img src="images/1987 Topps Autos/377 Johnson.jpeg" width="200">
+        <img src="Images/1987 Topps Autos/377 Johnson.jpeg" width="200">
     </td>
     <td width="200">
         <img src="Images/1987 Topps Autos/543 Johnson.jpeg" width="200">
