--- a/Baseball/Baseball_M.htm
+++ b/Baseball/Baseball_M.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ma</h1>
+ <pre>
+    <a href="#Ma">Ma</a> <a href="#Mc">Mc</a> <a href="#Me">Me</a> <a href="#Mi">Mi</a> <a href="#Mo">Mo</a> <a href="#Mu">Mu</a>
+ </pre>
+ <h1 id="Ma">Ma</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -90,7 +93,7 @@
             <img width=200 src="Images/1987 Topps Autos/728 Martinez.jpeg">
         </td>
 </table>
-<h1>Mc</h1>
+<h1 id="Mc">Mc</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -149,7 +152,7 @@
         </td>
         </tr>
     </table>
-<h1>Me</h1>
+<h1 id="Me">Me</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -175,7 +178,7 @@
     </tr>
 
     </table>
-<h1>Mi</h1>
+<h1 id="Mi">Mi</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
         <tr>
             <td>
@@ -207,7 +210,7 @@
             </td>
         </tr>
         </table>
-<h1>Mo</h1>
+<h1 id="Mo">Mo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -252,7 +255,7 @@
 
         </tr>
     </table>
-    <h1>Mu</h1>
+    <h1 id="Mu">Mu</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
         <tr>
             <td>
