--- a/Baseball/Baseball_N.htm
+++ b/Baseball/Baseball_N.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ne</h1>
+ <pre>
+    <a href="#Ne">Ne</a> <a href="#Ni">Ni</a> <a href="#No">No</a>
+ </pre>
+ <h1 id="Ne">Ne</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -36,7 +39,7 @@
     
     </tr>
 </table>
-<h1>Ni</h1>
+<h1 id="Ni">Ni</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -97,7 +100,7 @@
         </td>
         </tr>
     </table>
-<h1>No</h1>
+<h1 id="No">No</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
