--- a/Baseball/Baseball_O.htm
+++ b/Baseball/Baseball_O.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ob</h1>
+ <pre>
+    <a href="#Ob">Ob</a> <a href="#Oe">Oe</a> <a href="#Ol">Ol</a> <a href="#Or">Or</a> <a href="#Ow">Ow</a>
+ </pre>
+ <h1 id="Ob">Ob</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -46,7 +49,7 @@
 </tr>
 
 </table>
-<h2>Oe</h2>
+<h2 id="Oe">Oe</h2>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -61,7 +64,7 @@
         </td>
     </tr>
 </table>
-<h1>Ol</h1>
+<h1 id="Ol">Ol</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -77,7 +80,7 @@
         </td>
     </tr>
     </table>
-<h1>Or</h1>
+<h1 id="Or">Or</h1>
 
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
@@ -93,7 +96,7 @@
         </td>
         </tr>
 </table>
-<h1>Ow</h1>
+<h1 id="Ow">Ow</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
