--- a/Baseball/Baseball_P.htm
+++ b/Baseball/Baseball_P.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Pa</h1>
+ <pre>
+    <a href="#Pa">Pa</a> <a href="#Pe">Pe</a> <a href="#Ph">Ph</a> <a href="#Pi">Pi</a> <a href="#Pl">Pl</a> <a href="#Po">Po</a> <a href="#Py">Py</a>
+ </pre>
+ <h1 id="Pa">Pa</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -70,7 +73,7 @@
     </td>
     </tr>
 </table>
-<h1>Pe</h1>
+<h1 id="Pe">Pe</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -104,7 +107,7 @@
         </td>
     </tr>
     </table>
-<h1>Ph</h1>
+<h1 id="Ph">Ph</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -119,7 +122,7 @@
         </td>
     </tr>
 </table>
-<h1>Pi</h1>
+<h1 id="Pi">Pi</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -136,7 +139,7 @@
         </td>
     </tr>
 </table>
-<h1>Pl</h1>
+<h1 id="Pl">Pl</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -151,7 +154,7 @@
         </td>
     </tr>
 </table>
-<h1>Po</h1>
+<h1 id="Po">Po</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -176,7 +179,7 @@
 
     </tr>
 </table>
-<h1>Py</h1>
+<h1 id="Py">Py</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
