--- a/Baseball/Baseball_R.htm
+++ b/Baseball/Baseball_R.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ra</h1>
+ <pre>
+    <a href="#Ra">Ra</a> <a href="#Re">Re</a> <a href="#Ri">Ri</a> <a href="#Ro">Ro</a> <a href="#Ru">Ru</a>
+ </pre>
+ <h1 id="Ra">Ra</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -51,7 +54,7 @@
     </td>
 </tr>
 </table>
-<h1>Re</h1>
+<h1 id="Re">Re</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -107,7 +110,7 @@
         </td>
         </tr>
     </table>
-<h1>Ri</h1>
+<h1 id="Ri">Ri</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td colspan="2" align="center">
@@ -127,7 +130,7 @@
 
     </tr>
     </table>
-<h1>Ro</h1>
+<h1 id="Ro">Ro</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -222,7 +225,7 @@
             </td>
         </tr>
     </table>
-<h1>Ru</h1>
+<h1 id="Ru">Ru</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -240,5 +243,7 @@
         </td>
 
     </tr>
+</table>
+
 </body>
 </html>
