--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -20,7 +20,11 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Sa</h1>
+ <pre>
+    <a href="#Sa">Sa</a> <a href="#Sc">Sc</a> <a href="#Se">Se</a> <a href="#Sh">Sh</a> <a href="#Si">Si</a> <a href="#Sk">Sk</a> <a href="#Sl">Sl</a>
+    <a href="#Sm">Sm</a> <a href="#Sn">Sn</a> <a href="#So">So</a> <a href="#Sp">Sp</a> <a href="#St">St</a> <a href="#Su">Su</a> <a href="#Sv">Sv</a> <a href="#Sw">Sw</a>
+    </pre>
+ <h1 id="Sa">Sa</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td colspan="2" align="center">
@@ -93,7 +97,7 @@
         </td>
     </tr>
 </table>
-<h1>Sc</h1>
+<h1 id="Sc">Sc</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -173,7 +177,7 @@
             </td>
         </tr>
 </table>
-<h1>Se</h1>
+<h1 id="Se">Se</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -198,7 +202,7 @@
 
     </tr>
 </table>
-<h1>Sh</h1>
+<h1 id="Sh">Sh</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -230,7 +234,7 @@
         </td>
     </tr>
 </table>
-<h1>Si</h1>
+<h1 id="Si">Si</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -245,7 +249,7 @@
         </td>
     </tr>
 </table>
-<h1>Sk</h1>
+<h1 id="Sk">Sk</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -262,7 +266,7 @@
         </tr>
 </table>
 <!--<h1>Sl</h1>-->
-<h1>Sm</h1>
+<h1 id="Sm">Sm</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -305,7 +309,7 @@
         </td>
         </tr>
     </table>
-<h1>Sn</h1>
+<h1 id="Sn">Sn</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -320,7 +324,7 @@
         </td>
     </tr>
 </table>
-<h1>So</h1>
+<h1 id="So">So</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -335,7 +339,7 @@
         </td>
     </tr>
 </table>
-<h1>Sp</h1>
+<h1 id="Sp">Sp</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -363,7 +367,7 @@
         </td>
     </tr>
 </table>
-<h1>St</h1>
+<h1 id="St">St</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -423,7 +427,7 @@
     </tr>
     
 </table>
-<h1>Su</h1>
+<h1 id="Su">Su</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -447,7 +451,7 @@
         </td>
     </tr>
 </table>
-<h1>Sv</h1>
+<h1 id="Sv">Sv</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -463,7 +467,8 @@
         </td>
     </tr>
 </table>
-<h1>Sw</h1><table align="center" border="1" cellpadding="5" cellspacing="5">
+<h1 id="Sw">Sw</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
             Bill Swift (born 1961)
