--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
- <h1>Ta</h1>
+ <pre>
+    <a href="#Ta">Ta</a> <a href="#Te">Te</a> <a href="#Th">Th</a> <a href="#Tr">Tr</a> <a href="#Tu">Tu</a>
+ </pre>
+ <h1 id="Ta">Ta</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -35,7 +38,7 @@
     </td>
 </tr>
 </table>
-<h1>Te</h1>
+<h1 id="Te">Te</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -90,7 +93,7 @@
         </td>
         </tr>
     </table>
-<h1>Th</h1>
+<h1 id="Th">Th</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -146,7 +149,7 @@
         </td>
         </tr>
     </table>
-<h1>Tr</h1>
+<h1 id="Tr">Tr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -177,7 +180,7 @@
         </td>
     </tr>
     </table>
-<h1>Tu</h1>
+<h1 id="Tu">Tu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
