--- a/Baseball/Baseball_V.htm
+++ b/Baseball/Baseball_V.htm
@@ -20,7 +20,10 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
-<h1>Va</h1>
+ <pre>
+    <a href="#Va">Va</a> <a href="#Ve">Ve</a> <a href="#Vi">Vi</a>
+ </pre>
+<h1 id="Va">Va</h1>
  <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
     <td>
@@ -70,7 +73,7 @@
     </td>
     </tr>
 </table>
-<h1>Ve</h1>
+<h1 id="Ve">Ve</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -85,7 +88,7 @@
         </td>
     </tr>
     </table>
-<h1>Vi</h1>
+<h1 id="Vi">Vi</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
