--- a/autographs.html
+++ b/autographs.html
@@ -38,8 +38,8 @@
 </td>
 <td>
 <center><b>Special Lists</b></center>
-<a href="Baseball/Baseball_HOF.htm">Baseball Hall of Fame</a>
-<br><a href="Baseball/Commissioners.htm">Commissioners of Baseball</a>
+<!--<a href="Baseball/Baseball_HOF.htm">-->Baseball Hall of Fame<!--</a>-->
+<br><<a href="Baseball/Commissioners.htm">Commissioners of Baseball</a>
 </td>
 </tr>
 </table>
