--- a/Baseball/1987Topps6.html
+++ b/Baseball/1987Topps6.html
@@ -143,7 +143,9 @@
         <img width="200" src="Images\1987 Topps Autos/526 Mason.jpeg">
         </td>
         <td></td>
-        <td></td>
+        <td>
+            <img width="200" src="Images/1987 Topps Autos/528 Dixon.jpeg">
+        </td>
     </tr>
     <tr>
         <td>529<br>Alvaro Espinoza</td>
