--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -20,7 +20,7 @@
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
 <hr>
-<h1>Aa</h1>
+<h1 id="Aa">Aa</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
         <td>
@@ -35,7 +35,7 @@
         </td>
     </tr>
 </table>
-<h1>Ad</h1>
+<h1 id="Ad">Ad</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td>
@@ -93,7 +93,7 @@
     </td>
 </tr>
 </table>
-<h1>Al</h1>
+<h1 id="Al">Al</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
 <td>
@@ -108,7 +108,7 @@
     </td>
 </tr>
 </table>
-<h1>An</h1>
+<h1 id="An">An</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
@@ -154,7 +154,22 @@
         <td><img src="Images/1987 Topps Autos/775 Andujar.jpeg" width="200"></td>
     </tr>
     </table>
-<h1>At</h1>
+<h1 id="Ar">Ar</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+    <td>
+        Ange Armato
+        <br> AAGPBL 1949, 1953
+        <br> Custom
+    </td>
+
+    </tr>
+    <tr>
+    <td width="300"><img src="Images/AAGPBL/Ange Armato.jpeg" width=300> </td>
+
+    </tr>
+    </table>
+<h1 id="At">At</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
     <td>
@@ -162,11 +177,16 @@
         <br> 1983-1989
         <br> 1987 Topps
     </td>
+    <td>
+        Luke Atkinson
+        <br>Satchel Paige All-Stars
+        <br>1955-1960
+    </td>
 
     </tr>
     <tr>
     <td width="200"><img src="Images/1987 Topps Autos/052 Atherton.jpeg" width=200> </td>
-
+    <td><img width="200" src="Images/Negro Leagues/Luke Atkinson.jpeg"> </td>
     </tr>
     
     </table>
