--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -154,14 +154,14 @@
             <br>1987 Topps
         </td>
         <td>
-    
-        </td>
-        <td>
-    
+            Jim Cobbin
+            <br>Indianapolis Clows
+            <br>1950-1958 
         </td>
     </tr>
     <tr>
         <td width="200"><img src="Images/1987 Topps Autos/423 Cocanower.jpeg" width="200"></td>
+        <td width="200"><img src="Images/Negro Leagues/Jim Cobbin.jpeg" width="200"></td>
     </tr>
     </table>
     <h1>Cr</h1>
