--- a/Baseball/Baseball_P.htm
+++ b/Baseball/Baseball_P.htm
@@ -106,6 +106,19 @@
             <img width="200" src="Images/1987 Topps Autos/787 Pena.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Betty Jean Peterson
+            <br>AAGPBL: 1952 - 1953
+            <br>1995 Fritsch AAGPBL
+
+        </td>
+    </tr>
+    <tr>
+        <td>
+        <img width="200" src="Images/AAGPBL/Betty Peterson.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Ph">Ph</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
