--- a/Baseball/Baseball_Z.htm
+++ b/Baseball/Baseball_Z.htm
@@ -21,6 +21,22 @@
 <!-- for deceased players use 
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
+ <h1>Za</h1>
+ <table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td colspan="2" align="center">
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Jim Zapp
+            <br>Baltimore Elite Giants, Nashville Cubs, Atlanta Black Crackers 
+            <br>Birmingham Black Barons
+            <br>1945-48, 1950-51, 1954
+        </td>
+    </tr>
+    <tr>
+        <td><img width="200" src="Images/Negro Leagues/Jim Zapp.jpeg"></td>
+        <td><img width="200" src="Images/Negro Leagues/Jim Zapp 2.jpeg"></td>
+    </tr>
+ </table>
  <h1>Zu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
