--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -149,6 +149,11 @@
             <br>1976 - 1989
             <br>1987 Topps
         </td>
+        <td>
+            Bill Krueger
+            <br>1983-1995
+            <br>1993 Donruss
+        </td>
 
     </tr>
     <tr>
@@ -158,7 +163,9 @@
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/580 Krukow.jpeg">
         </td>
-
+        <td>
+            <img width="200" src="Images/MLB/Bill Krueger.jpeg">
+        </td>
     </tr>
 
     </table>
