--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -87,6 +87,11 @@
             <br>1978 - 1986
             <br>1987 Topps
         </td>
+        <td>
+            Bill Sampen
+            <br>1990 - 1994
+            <br>1992 Donruss Triple Play
+        </td>
     </tr>
     <tr>
         <td>
@@ -94,6 +99,9 @@
         </td>
         <td>
             <img width="200" src="Images/1987 Topps Autos/104 Sample.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Bill Sampen.jpeg">
         </td>
     </tr>
 </table>
@@ -139,6 +147,7 @@
             <br>1981 - 1992
             <br>1987 Topps | 1987 Topps Traded
         </td>
+    
     </tr>
     <tr>
         <td width="200">
@@ -163,6 +172,9 @@
                 <br>1987 Topps
             </td>
             <td>
+                Tim Scott
+                <br>1991 - 1997
+                <br>1992 Topps Stadium Club
             </td>
         </tr>
         <tr>
@@ -174,6 +186,7 @@
     
             </td>
             <td>
+                <img width="200" src="Images/MLB/Tim Scott.jpeg">
             </td>
         </tr>
 </table>
@@ -302,10 +315,18 @@
            <br>1984 - 1996
            <br>1987 Topps
         </td>
+        <td>
+            Roy Smith
+            <br>1984 - 1991
+            <br>1991 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/544 Smith.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Roy Smith.jpeg">
         </td>
         </tr>
     </table>
@@ -317,10 +338,18 @@
             <br>1986 - 1994
             <br>1987 Topps
         </td>
+        <td>
+            Don Shaw
+            <br>1967 - 1972
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/192 Snyder.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Don Shaw.jpeg">
         </td>
     </tr>
 </table>
@@ -440,7 +469,11 @@
             <br> 1974 - 1981
             <br>1987 Topps
         </td>
-
+        <td>
+            Darrell Sutherland
+            <br>1964 - 1968
+            <br>1966 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
@@ -448,6 +481,9 @@
         </td>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/190 Sundberg.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Darrell Sutherland.jpeg">
         </td>
     </tr>
 </table>
