--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -150,12 +150,19 @@
             Bill "Lefty" Bell
             <br>KC Monarchs 1949-1951; 1954
             <br>Birmingham Black Barons 1950
-
+        </td>
+        <td>
+            Blaine Beatty
+            <br>1989-1991
+            <br>1990 Bowamn
         </td>
     </tr>
     <tr>
         <td>
             <img width="200" src="Images/Negro Leagues/Leffy Bell.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Blaine Beatty.jpeg">
         </td>
     </tr>
     </table>
