--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -89,17 +89,34 @@
         <br>1987 Topps
     </td>
     <td>
+        Larry Christenson
+        <br>1973 - 1983
+        <br>1984 Topps
     </td>
     <td>
     </td>
     </tr>
     <tr>
     <td width="200"><img src="Images/1987 Topps Autos/777 Chambliss.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/" width="200"> </td>
+    <td width="200"><img src="Images/MLB/Larry Christenson.jpeg" width="200"> </td>
+    <td width="200"> </td>
     </tr>
     </table>
-
+<h1>Ci</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Mark Ciardi
+            <br>1987
+            <br>1988 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Mark Ciardi.jpeg">
+        </td>
+    </tr>
+</table>
 <h1>Cl</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
