--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -132,6 +132,18 @@
     <td width="200"><img src="Images/1987 Topps Autos/167 DeShaies.jpeg" width="200"> </td>
     <td width="200"><img src="Images/1987 Topps Autos/022 DeCinces.jpeg" width="200"> </td>
     </tr>
+    <tr>
+        <td>
+            José De León
+            <br>2016 - 2023
+            <br>2017 Donruss The Rookies
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Jose De Leon.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Id">Di</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -173,23 +185,54 @@
 <h1 id="Dr">Dr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
+        <td>
+            Dave Dravecky
+            <br>1982-1989
+            <br>1987 Topps
+        </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Dick Drago
+            <br>1961-1981
+            <br>1982 Fleer
+    
+        </td>
     <td>
         Doug Drabek 
         <br>1986-1998
         <br>1987 Topps
     </td>
-    <td>
-        Dave Dravecky
-        <br>1982-1989
-        <br>1987 Topps
-    </td>
-    <td>
-    </td>
+
     </tr>
     <tr>
+     <td width="200"><img src="Images/1987 Topps Autos/470 Dravecky.jpeg" width="200"> </td>
+     <td width="200"><img src="Images/MLB/Dick Drago.jpeg" width="200"> </td>
     <td width="200"><img src="Images/1987 Topps Autos/283 drabek.jpeg" width=200> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/470 Dravecky.jpeg" width="200"> </td>
-    <td width="200"></td>
+
+    </tr>
+    <tr>
+        <td colspan="3" align="center">
+            Doug Drabek
+            <br>1986 - 1988
+            <br>1991 Topps | 1988 Score | 1989 Donruss
+        </td>
+    </tr>
+    <tr>
+        <td><img width="200" src="Images/MLB/Doug Drabek 1.jpeg"></td>
+        <td><img width="200" src="Images/MLB/Doug Drabek 2.jpeg"></td>
+        <td><img width="200" src="Images/MLB/Doug Drabek.jpeg"></td>
+    </tr>
+    <tr>
+        <td>
+            Kirk Dressendorfer
+            <br>1991
+            <br>1992 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Kirk Dressendorfer.jpeg">
+        </td>
     </tr>
     </table>
 <h1 id="Du">Du</h1>
