--- a/Baseball/Baseball_F.htm
+++ b/Baseball/Baseball_F.htm
@@ -93,11 +93,19 @@
             <br>Coach: 2013-2014
             <br>1987 Topps
         </td>
+        <td>
+            Huck Flener
+            <br>1993 - 1997
+            <br>1994 Topps
+        </td>
 
     </tr>
     <tr>
         <td width="200">
             <img src="Images/1987 Topps Autos/462 Fletcher.jpeg" width="200">
+        </td>
+        <td>
+            <img src="Images/MLB/Huck Flener.jpeg" width="200">
         </td>
     </tr>
     </table>
@@ -114,7 +122,12 @@
             <br>Player: 1981-1990
             <br>Manager: 1997-2023
         </td>
-
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Woodie Fryman
+            <br>1966 - 1983
+            <br>1982 Zoellers
+        </td>
     </tr>
     <tr>
         <td width="200">
@@ -122,6 +135,9 @@
         </td>
         <td width="200">
             <img src="Images/1987 Topps Autos/785 Francona.jpeg" width="200">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Woodie Fryman.jpeg">
         </td>
 
     </tr>
