--- a/Baseball/Baseball_H.htm
+++ b/Baseball/Baseball_H.htm
@@ -65,6 +65,11 @@
         <br>1981 - 1995
         <br>1987 Topps
     </td>
+    <td>
+        Ed Halicki
+        <br>1974 - 1980
+        <br>1980 Topps
+    </td>
 </tr>
 <tr>
     <td width="200">
@@ -72,6 +77,9 @@
     </td>
     <td width="200">
         <img src="Images/1987 Topps Autos/781 Hammaker.jpeg" width="200">
+    </td>
+    <td>
+        <img width="200" src="Images/MLB/Ed Halicki.jpeg">
     </td>
     </tr>
 </table>
@@ -114,10 +122,18 @@
            <br>1979 - 1991
            <br>1987 Topps
         </td>
+        <td>
+            Xavier Hernandez
+            <br>1989 - 1999
+            <br>1992 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
             <img src="Images/1987 Topps Autos/721 Herr.jpeg" width="200">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Xavier Hernandez.jpeg">
         </td>
         </tr>
     </table>
