--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -23,6 +23,22 @@
  <pre>
     <a href="#Jo">Jo</a>
  </pre>
+ <h1 id="Ja">Ja</h1>
+ <table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Grant Jackson
+            <br>1965 - 1982
+            <br>1982 Donruss
+        </td>
+    </tr>
+    <tr>
+        <td>
+        <img width="200" src="Images/MLB/Grant Jackson.jpeg">
+        </td>
+    </tr>
+ </table>
  <h1 id="Jo">Jo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
@@ -48,7 +64,7 @@
         <img src="Images/1987 Topps Autos/267 Johnson.jpeg" width="200">
     </td>
     <td width="200">
-        <img src="Images/1987 Topps Autos/377 Johnson.jpeg" width="200">
+        <img src="images/1987 Topps Autos/377 Johnson.jpeg" width="200">
     </td>
     <td width="200">
         <img src="Images/1987 Topps Autos/543 Johnson.jpeg" width="200">
