--- a/Baseball/Baseball_L.htm
+++ b/Baseball/Baseball_L.htm
@@ -21,7 +21,7 @@
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
  <pre>
-    <a href="#La">La</a> <a href="#Le">Le</a> <a href="#Lo">Lo</a> <a href="#Lu">Lu</a> <a href="#Ly">Ly</a>
+    <a href="#La">La</a> <a href="#Le">Le</a> <a href="#Li">Li</a> <a href="#Lo">Lo</a> <a href="#Lu">Lu</a> <a href="#Ly">Ly</a>
  </pre>
  <h1 id="La">La</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -127,10 +127,19 @@
            <br>1977-1992
            <br>1987 Topps
         </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Don Larson
+            <br>1953-1967
+            <br>2002 Upper Deck<br> World Series Heroes
+        </td>
     </tr>
     <tr>
         <td>
             <img width="200" src="Images/1987 Topps Autos/768 Lamp.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Don Larson.jpeg">
         </td>
     </tr>
 </table>
@@ -160,6 +169,21 @@
 
     </tr>
     </table>
+<h1 id="Li">Li</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Derek Lilliquist
+            <br>1989 - 1996
+            <br>1991 Upper Deck
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Derek Lilliquist.jpeg">
+        </td>
+    </tr>
+</table>
 <h1 id="Lo">Lo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
@@ -228,6 +252,11 @@
             <br>1980 - 1987
             <br>1987 Topps
         </td>
+        <td>
+            Sparky Lyle
+            <br>1967 - 1982
+            <br>1982 Donruss
+        </td>
  
     </tr>
     <tr>
@@ -237,7 +266,9 @@
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/697 Lynch.jpeg">
         </td>
-
+        <td>
+            <img width="200" src="Images/MLB/Sparky Lyle.jpeg">
+        </td>
     </tr>
 
     </table>
