--- a/Baseball/Baseball_M.htm
+++ b/Baseball/Baseball_M.htm
@@ -86,11 +86,18 @@
            <br>1974 - 1988
            <br>1987 Topps
         </td>
-
+        <td>
+            Jason Marquis
+            <br>2000 - 2015
+            <br>2005 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
             <img width=200 src="Images/1987 Topps Autos/728 Martinez.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Jason Marquis.jpeg">
         </td>
 </table>
 <h1 id="Mc">Mc</h1>
@@ -151,6 +158,18 @@
             <img width=200 src="Images/1987 Topps Autos/742 McGaffigan.jpeg">
         </td>
         </tr>
+    <tr>
+        <td>
+            Bo McLaughlin
+            <br>1976 - 1982
+            <br>1982 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Bo McLaughlin.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Me">Me</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -165,7 +184,11 @@
             <br>1982 - 1990
             <br>1987 Topps
         </td>
-
+        <td>
+            Dave Meads 
+            <br>1987 - 1988
+            <br>1989 Topps
+        </td>
     </tr>
     <tr>
         <td width="200">
@@ -173,6 +196,9 @@
         </td>
         <td width="200">
             <img width=200 src="Images/1987 Topps Autos/514 Mercado.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Dave Meads.jpeg">
         </td>
  
     </tr>
@@ -207,6 +233,18 @@
             </td>
             <td width="200">
                 <img width="200" src="Images/1987 Topps Traded/John Mitchell.jpeg">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Quinton Miller 
+                <br>Minor League Player: 2009 - 2014
+                <br>2008 Bowman Sterling Prospects
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img width="200" src="Images/MLB/Quinton Miller.jpeg">
             </td>
         </tr>
         </table>
