--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -159,12 +159,15 @@
         <br>1987 Topps
     </td>
     <td>
+        Ken Dixon
+        <br>1984 - 1987
+        <br>1987 Topps
     </td>
     </tr>
     <tr>
     <td width="200"><img src="Images/1987 Topps Autos/651 Distefano.jpeg" width=200> </td>
     <td width="200"><img src="Images/1987 Topps Autos/662 DiPino.jpeg" width="200"> </td>
-    <td width="200"><img src="Images/1987 Topps Autos/" width="200"> </td>
+    <td width="200"><img src="Images/1987 Topps Autos/528 Dixon.jpeg" width="200"> </td>
     </tr>
     </table>
 <h1 id="Do">Do</h1>
