--- a/Baseball/Baseball_N.htm
+++ b/Baseball/Baseball_N.htm
@@ -30,13 +30,20 @@
         Al Newman
         <br>1985 - 1992
         <br>1987 Topps
-
+    </td>
+    <td>
+        Pat Neschek
+        <br>2006 - 2019
+        <br>2013 Topps Update
+    </td>
 </tr>
 <tr>
     <td width="200">
         <img width="200" src="Images/1987 Topps Autos/323 Newman.jpeg">
     </td>
-    
+    <td>
+        <img width="200" src="Images/MLB/Pat Neschek.jpeg">
+    </td>
     </tr>
 </table>
 <h1 id="Ni">Ni</h1>
@@ -86,6 +93,9 @@
             <br>1987 Topps
         </td>
         <td>
+            David Nied
+            <br>1992 - 1996
+            <br>1994 Topps
         </td>
     </tr>
     <tr>
@@ -96,7 +106,7 @@
             <img width="200" src="Images/1987 Topps Autos/694 Niekro.jpeg">
         </td>
         <td width="200">
-    
+            <img width="200" src="Images/MLB/David Nied.jpeg">
         </td>
         </tr>
     </table>
