--- a/Baseball/Baseball_O.htm
+++ b/Baseball/Baseball_O.htm
@@ -104,10 +104,18 @@
             <br>1983 - 1995
             <br>1987 Topps
         </td>
+        <td>
+            Bob Owchinko
+            <br>1976 - 1986
+            <br>1983 Fleer
+        </td>
     </tr>
     <tr>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/591 Owen.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Bob Owchinko.jpeg">
         </td>
     </tr>
 </table>
