--- a/Baseball/Baseball_R.htm
+++ b/Baseball/Baseball_R.htm
@@ -224,6 +224,18 @@
                 <img width="200" src="Images/1987 Topps Autos/712 Robinson.jpeg">
             </td>
         </tr>
+        <tr>
+            <td>
+                Steve Rosenberg
+                <br>1988 - 1991
+                <br>1990 Topps
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img width="200" src="Images/MLB/Steve Rosenberg.jpeg">
+            </td>
+        </tr>
     </table>
 <h1 id="Ru">Ru</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
