--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -74,13 +74,12 @@
            <br>1976 - 1991
            <br>1987 Topps
         </td>
-        <td>
+        <td colspan="2" align="center">
             Scott Terry
             <br>1986 - 1991
-            <br>1987 Topps
+            <br>1987 Topps | 1988 Topps
         </td>
-        <td>
-        </td>
+
     </tr>
     <tr>
         <td width="200">
@@ -90,8 +89,9 @@
             <img width="200" src="Images/1987 Topps Autos/453 Terry.jpeg">
         </td>
         <td width="200">
+            <img width="200" src="Images/MLB/Scott Terry.jpeg">
         </td>
-        </tr>
+    </tr>
     </table>
 <h1 id="Th">Th</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
