--- a/Baseball/Baseball_V.htm
+++ b/Baseball/Baseball_V.htm
@@ -57,6 +57,9 @@
        <br>1987 Topps
     </td>
     <td>
+        Todd Van Poppel
+        <br>1991 - 2004
+        <br>1991 Score
     </td>
     <td>
     </td>
@@ -66,7 +69,7 @@
         <img width="200" src="Images/1987 Topps Autos/717 Vande Berg.jpeg">
     </td>
     <td width="200">
-
+        <img width="200" src="Images/MLB/Todd Van Poppel.jpeg">
     </td>
     <td width="200">
 
