--- a/Baseball/Baseball_Y.htm
+++ b/Baseball/Baseball_Y.htm
@@ -52,6 +52,12 @@
             <br>1985 - 1989
             <br>1987 Topps
         </td>
+        <td>
+            Pete Young
+            <br>1992 - 1993
+            <br>1993 Score
+
+        </td>
 
     </tr>
     <tr>
@@ -60,6 +66,9 @@
         </td>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/105 Youmans.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Pete Young.jpeg">
         </td>
     </tr>
 </table>
