--- a/Baseball/Baseball_W.htm
+++ b/Baseball/Baseball_W.htm
@@ -54,6 +54,18 @@
         <img width="200" src="Images/1987 Topps Autos/762 Ward.jpeg">
     </td>
 </tr>
+<tr>
+    <td>
+        Paul Wagner
+        <br>1992 - 1999
+        <br>1994 Topps
+    </td>
+</tr>
+<tr>
+    <td>
+        <img width="200" src="Images/MLB/Paul Wagner.jpeg">
+    </td>
+</tr>
 </table>
 <h1 id="We">We</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -196,6 +208,9 @@
            <br>1987 Topps
         </td>
         <td>
+            Wilbur Wood
+            <br>1961 - 1978
+            <br>1964 Topps 
         </td>
         <td>
         </td>
@@ -205,7 +220,7 @@
             <img width="200" src="Images/1987 Topps Autos/088 Wojna.jpeg">
         </td>
         <td width="200">
-    
+            <img width="200" src="Images/MLB/Wilbur Wood.jpeg">
         </td>
         <td width="200">
     
