--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <p>I've collected autographs since I was a pre-teen, having collected my first thru-the-mail autographs in 1991 when I collected the autographs of Cecil Fielder, Roberto Alomar, and Todd Van Poppel. I was hooked after that! I would love to have the largest collection of autographs, according to Guinness, eventually, but I've got a very long way to go.</p>
  <p>It's a fun hobby for me, especially as a through the mail experiment because I not only get the hit of dopimine when I receive an autographed card, but there's also an additional hit of dopamine that someone sent a letter back to me. As an autistic individual with ADD, PTSD from boy scout camp and having dealt with major depression for the majority of my life, I am happy to chase the dopamine!</p>
  <p>If you're interested in my autograph collection, it can be viewed <a href="autographs.html">here.</a> I'm slowly uploading images as I am able to get the material scanned.</p>
-
+<p>13 February 2025: added 46 scanned cards across the autographs page. </p>
     </main>
     <footer>
         <p>&copy; 2025 Dave Mitchner. All rights reserved.</p>
