--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -82,12 +82,20 @@
         <br>Baseball Umpire
         <br>1979
     </td>
+    <td>
+        Roger Bailey
+        <br>1995 - 1997
+        <br>1993 Stadium Club Colorado Rockies
+    </td>
 </tr>
 <tr>
     <td>
         HOLDER
         <br>FOR
         <BR>PHOTO
+    </td>
+    <td>
+        <img width="200" src="Images/MLB/Roger Bailey.jpeg">
     </td>
 </tr>
 </table>
