--- a/Baseball/Baseball_F.htm
+++ b/Baseball/Baseball_F.htm
@@ -141,6 +141,18 @@
         </td>
 
     </tr>
+    <tr>
+        <td colspan="3" align="center">
+            Tony Fossas
+            <br>1988 - 1999
+            <br>1994 Topps
+        </td>
+    </tr>
+    <tr>
+        <td colspan="3" align="center">
+        <img width="200" src="Images/MLB/Tony Fossas.jpeg">
+        </td>
+    </tr>
     </table>
 </body>
 </html>
