--- a/Baseball/Baseball_M.htm
+++ b/Baseball/Baseball_M.htm
@@ -241,10 +241,26 @@
                 <br>Minor League Player: 2009 - 2014
                 <br>2008 Bowman Sterling Prospects
             </td>
+            <td>
+                Blas Minor
+                <br>1992 - 1997
+                <br>1994 Topps
+            </td>
+            <td>
+                Dyar Miller
+                <br>1975 - 1981
+                <br>1982 Fleer
+            </td>
         </tr>
         <tr>
             <td>
                 <img width="200" src="Images/MLB/Quinton Miller.jpeg">
+            </td>
+            <td>
+                <img width="200" src="Images/MLB/Blas Minor.jpeg">
+            </td>
+            <td>
+                <img width="200" src="Images/MLB/Dyar Miller.jpeg">
             </td>
         </tr>
         </table>
