--- a/Baseball/Baseball_P.htm
+++ b/Baseball/Baseball_P.htm
@@ -21,7 +21,7 @@
  <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
  -->
  <pre>
-    <a href="#Pa">Pa</a> <a href="#Pe">Pe</a> <a href="#Ph">Ph</a> <a href="#Pi">Pi</a> <a href="#Pl">Pl</a> <a href="#Po">Po</a> <a href="#Py">Py</a>
+    <a href="#Pa">Pa</a> <a href="#Pe">Pe</a> <a href="#Ph">Ph</a> <a href="#Pi">Pi</a> <a href="#Pl">Pl</a> <a href="#Po">Po</a> <a href="#Pu">Pu</a> <a href="#Py">Py</a>
  </pre>
  <h1 id="Pa">Pa</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -190,6 +190,22 @@
             <img width="200" src="Images/1987 Topps Autos/437 Power.jpeg">
         </td>
 
+    </tr>
+</table>
+<h1 id="Pu">Pu</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Charlie Puleo
+            <br>1981 - 1989
+            <br>1988 Donruss
+        </td>
+
+    </tr>
+    <tr>
+        <td width="200">
+            <img width="200" src="Images/MLB/Charlie Puleo.jpeg">
+        </td>
     </tr>
 </table>
 <h1 id="Py">Py</h1>
