--- a/Baseball/Baseball_R.htm
+++ b/Baseball/Baseball_R.htm
@@ -247,13 +247,20 @@
             <br>1987 Topps Cut to hold
             <br>Auto on paper
         </td>
+        <td>
+            Scott Ruskin
+            <br>1991 - 1993
+            <br>1992 Upper Deck
+        </td>
 
     </tr>
     <tr>
         <td width="200">
             <img width="200" src="Images/1987 Topps Autos/221 Ruhle.jpeg">
         </td>
-
+        <td>
+            <img width="200" src="Images/MLB/Scott Ruskin.jpeg">
+        </td>
     </tr>
 </table>
 
