--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -395,6 +395,18 @@
             <img width="200" src="Images/1987 Topps Traded/Chris Speier.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Justin Speier
+            <br>1998 - 2009
+            <br>2004 Topps Total - Silver 
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Justin Speier.jpeg">
+        </td>
+    </tr>
 </table>
 <h1 id="St">St</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
