--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -135,6 +135,9 @@
             <br>1987 Topps
         </td>
         <td>
+            Mark Thompson
+            <br>1994 - 2000
+            <br>1994 Topps Future Stars
         </td>
     </tr>
     <tr>
@@ -145,7 +148,7 @@
             <img width="200" src="Images/1987 Topps Autos/780 Thornton.jpeg">
         </td>
         <td width="200">
-    \
+            <img width="200" src="Images/MLB/Mark Thompson.jpeg">
         </td>
         </tr>
     </table>
