--- a/autographs.html
+++ b/autographs.html
@@ -18,6 +18,7 @@
     <hr>
    <p>I've collected autographs since I was a pre-teen, having collected my first thru-the-mail autographs in 1991 when I collected the autographs of Cecil Fielder, Roberto Alomar, and Todd Van Poppel. I was hooked after that! I would love to have the largest collection of autographs, according to Guinness, eventually, but I've got a very long way to go.</p>
     <p>Here are some of the autographs I've collected over the years:</p>
+    <p>As of 14 February 2025, 399 cards have been posted.</p>
 <hr>
 <center><h1>Baseball</h1></center>
     <table border="1" cellpadding="5" cellspacing="5" align="center">
