--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -104,6 +104,18 @@
             <img width="200" src="Images/MLB/Bill Sampen.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Mo Sanford
+            <br>1991 - 1995
+            <br>1994 Topps
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Mo Sanford.jpeg">
+        </td>
+    </tr>
 </table>
 <h1 id="Sc">Sc</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -466,7 +478,26 @@
             <img width="200" src="Images/1987 Topps Autos/788 Stoddard.jpeg">
         </td>
     </tr>
-    
+    <tr>
+        <td>
+            Bill Stoneman
+            <br>1967 - 1974
+            <br>1969 Topps
+        </td>
+        <td>
+            Ross Stripling
+            <br>2016 - 
+            <br>2026 Topps Holiday
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="200" src="Images/MLB/Bill Stoneman.jpeg">
+        </td>
+        <td>
+            <img width="200" src="Images/MLB/Ross Stripling.jpeg">
+        </td>
+    </tr>
 </table>
 <h1 id="Su">Su</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
