--- a/Baseball/Baseball_W.htm
+++ b/Baseball/Baseball_W.htm
@@ -60,10 +60,18 @@
         <br>1992 - 1999
         <br>1994 Topps
     </td>
+    <td>
+        Mike Walker
+        <br>1988 - 1996
+        <br>1991 Donruss
+    </td>
 </tr>
 <tr>
     <td>
         <img width="200" src="Images/MLB/Paul Wagner.jpeg">
+    </td>
+    <td>
+        <img width="200" src="Images/MLB/Mike Walker.jpeg">
     </td>
 </tr>
 </table>
